generated/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    J
    N
    X

Grammar

Rule 0     S' -> document
Rule 1     document -> bloc
Rule 2     bloc -> line
Rule 3     bloc -> bloc line
Rule 4     line -> balise_start content balise_end
Rule 5     line -> balise_start bloc balise_end
Rule 6     line -> balise_autoclose
Rule 7     balise_autoclose -> < token / >
Rule 8     balise_start -> < content >
Rule 9     balise_end -> < / content >
Rule 10    content -> token
Rule 11    token -> IDENTIFIER

Terminals, with rules where they appear

/                    : 7 9
<                    : 7 8 9
>                    : 7 8 9
IDENTIFIER           : 11
J                    : 
N                    : 
X                    : 
error                : 

Nonterminals, with rules where they appear

balise_autoclose     : 6
balise_end           : 4 5
balise_start         : 4 5
bloc                 : 1 3 5
content              : 4 8 9
document             : 0
line                 : 2 3
token                : 7 10

Parsing method: LALR

state 0

    (0) S' -> . document
    (1) document -> . bloc
    (2) bloc -> . line
    (3) bloc -> . bloc line
    (4) line -> . balise_start content balise_end
    (5) line -> . balise_start bloc balise_end
    (6) line -> . balise_autoclose
    (8) balise_start -> . < content >
    (7) balise_autoclose -> . < token / >

    <               shift and go to state 6

    document                       shift and go to state 1
    bloc                           shift and go to state 2
    line                           shift and go to state 3
    balise_start                   shift and go to state 4
    balise_autoclose               shift and go to state 5

state 1

    (0) S' -> document .



state 2

    (1) document -> bloc .
    (3) bloc -> bloc . line
    (4) line -> . balise_start content balise_end
    (5) line -> . balise_start bloc balise_end
    (6) line -> . balise_autoclose
    (8) balise_start -> . < content >
    (7) balise_autoclose -> . < token / >

    $end            reduce using rule 1 (document -> bloc .)
    <               shift and go to state 6

    line                           shift and go to state 7
    balise_start                   shift and go to state 4
    balise_autoclose               shift and go to state 5

state 3

    (2) bloc -> line .

    <               reduce using rule 2 (bloc -> line .)
    $end            reduce using rule 2 (bloc -> line .)


state 4

    (4) line -> balise_start . content balise_end
    (5) line -> balise_start . bloc balise_end
    (10) content -> . token
    (2) bloc -> . line
    (3) bloc -> . bloc line
    (11) token -> . IDENTIFIER
    (4) line -> . balise_start content balise_end
    (5) line -> . balise_start bloc balise_end
    (6) line -> . balise_autoclose
    (8) balise_start -> . < content >
    (7) balise_autoclose -> . < token / >

    IDENTIFIER      shift and go to state 11
    <               shift and go to state 6

    balise_start                   shift and go to state 4
    content                        shift and go to state 8
    bloc                           shift and go to state 9
    token                          shift and go to state 10
    line                           shift and go to state 3
    balise_autoclose               shift and go to state 5

state 5

    (6) line -> balise_autoclose .

    <               reduce using rule 6 (line -> balise_autoclose .)
    $end            reduce using rule 6 (line -> balise_autoclose .)


state 6

    (8) balise_start -> < . content >
    (7) balise_autoclose -> < . token / >
    (10) content -> . token
    (11) token -> . IDENTIFIER

    IDENTIFIER      shift and go to state 11

    content                        shift and go to state 12
    token                          shift and go to state 13

state 7

    (3) bloc -> bloc line .

    <               reduce using rule 3 (bloc -> bloc line .)
    $end            reduce using rule 3 (bloc -> bloc line .)


state 8

    (4) line -> balise_start content . balise_end
    (9) balise_end -> . < / content >

    <               shift and go to state 15

    balise_end                     shift and go to state 14

state 9

    (5) line -> balise_start bloc . balise_end
    (3) bloc -> bloc . line
    (9) balise_end -> . < / content >
    (4) line -> . balise_start content balise_end
    (5) line -> . balise_start bloc balise_end
    (6) line -> . balise_autoclose
    (8) balise_start -> . < content >
    (7) balise_autoclose -> . < token / >

    <               shift and go to state 17

    balise_start                   shift and go to state 4
    balise_end                     shift and go to state 16
    line                           shift and go to state 7
    balise_autoclose               shift and go to state 5

state 10

    (10) content -> token .

    <               reduce using rule 10 (content -> token .)
    >               reduce using rule 10 (content -> token .)


state 11

    (11) token -> IDENTIFIER .

    <               reduce using rule 11 (token -> IDENTIFIER .)
    /               reduce using rule 11 (token -> IDENTIFIER .)
    >               reduce using rule 11 (token -> IDENTIFIER .)


state 12

    (8) balise_start -> < content . >

    >               shift and go to state 18


state 13

    (7) balise_autoclose -> < token . / >
    (10) content -> token .

    /               shift and go to state 19
    >               reduce using rule 10 (content -> token .)


state 14

    (4) line -> balise_start content balise_end .

    <               reduce using rule 4 (line -> balise_start content balise_end .)
    $end            reduce using rule 4 (line -> balise_start content balise_end .)


state 15

    (9) balise_end -> < . / content >

    /               shift and go to state 20


state 16

    (5) line -> balise_start bloc balise_end .

    <               reduce using rule 5 (line -> balise_start bloc balise_end .)
    $end            reduce using rule 5 (line -> balise_start bloc balise_end .)


state 17

    (9) balise_end -> < . / content >
    (8) balise_start -> < . content >
    (7) balise_autoclose -> < . token / >
    (10) content -> . token
    (11) token -> . IDENTIFIER

    /               shift and go to state 20
    IDENTIFIER      shift and go to state 11

    content                        shift and go to state 12
    token                          shift and go to state 13

state 18

    (8) balise_start -> < content > .

    IDENTIFIER      reduce using rule 8 (balise_start -> < content > .)
    <               reduce using rule 8 (balise_start -> < content > .)


state 19

    (7) balise_autoclose -> < token / . >

    >               shift and go to state 21


state 20

    (9) balise_end -> < / . content >
    (10) content -> . token
    (11) token -> . IDENTIFIER

    IDENTIFIER      shift and go to state 11

    content                        shift and go to state 22
    token                          shift and go to state 10

state 21

    (7) balise_autoclose -> < token / > .

    <               reduce using rule 7 (balise_autoclose -> < token / > .)
    $end            reduce using rule 7 (balise_autoclose -> < token / > .)


state 22

    (9) balise_end -> < / content . >

    >               shift and go to state 23


state 23

    (9) balise_end -> < / content > .

    <               reduce using rule 9 (balise_end -> < / content > .)
    $end            reduce using rule 9 (balise_end -> < / content > .)

